--- a/servidos.html
+++ b/servidos.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-widht, " initial=height-initial>
+    <link rel="stylesheet" href="./css/servidos.css">
+    <title>Os mais servidos</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
+</head>
+<style>
+    /* cor de fundo principal */
+    body {
+        background-color: rgb(255, 187, 0);
+    }
+
+ /* Fonte de letra */
+ body {
+        font-family: fantasy;
+    }
+</style>
+
+<body>
+
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-widht, " initial=height-initial>
-        <link rel="stylesheet" href="./css/servidos.css">
-        <title>Os mais servidos</title>
-        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
     </head>
-    <style>
-        body {     
-    background-color: rgb(255, 187, 0);
-   }
-    </style>
-    <body>
-        <head>
-        </head>
-    </body>
-    <h1 style="text-align: center;">As três principais comidas mais pedidas!!!</h1>
+</body>
+<h1 style="text-align: center;">As três principais comidas mais pedidas!!!</h1>
 <br>
-    <h2 style="text-align: center;">Virada Paulista</h2>
-    <h1 style="text-align: center;"><img src="https://t3.ftcdn.net/jpg/03/78/61/60/360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg"
+<h2 style="text-align: center;">VIRADA PAULISTA</h2>
+<h1 style="text-align: center;"><img
+        src="https://t3.ftcdn.net/jpg/03/78/61/60/360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg"
         alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="700" height="500"></h1>
-  <br>
-    <h2 style="text-align: center;">Feijoada</h2>
-    <h1 style="text-align: center;"><img src="https://assets.unileversolutions.com/recipes-v2/229468.jpg"
-        alt="229468.avif" width="700" height="500"></h1>
-    <br>
-    <h2 style="text-align: center;">Strogonoff</h2>
-    <h1 style="text-align: center;"><img src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg"
+<br>
+<h2 style="text-align: center;">FEIJOADA</h2>
+<h1 style="text-align: center;"><img src="https://assets.unileversolutions.com/recipes-v2/229468.jpg" alt="229468.avif"
+        width="700" height="500"></h1>
+<br>
+<h2 style="text-align: center;">STROGONOFF</h2>
+<h1 style="text-align: center;"><img
+        src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg"
         alt="strogonoff-de-frango-1548843823" width="700" height="500"></h1>
-    </html>
+<br>
+<h2><p style="text-align: center;">E MUITO MAIS APENAS CLICANDO NO LINK ABAIXO!!</p></h2>
+<a href="cardapios.html">
+    <p style="text-align: center;"> CARDAPIOS DO RESTAURANT TAGLINE</p>
+</html>
