--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
 
-<h1 style="text-align: center;">Seja Bem-vindos!!!</h1>
+<h1 style="text-align: center;">SEJA BEM-VINDOS!!!</h1>
 
 <body>
 
@@ -19,16 +19,19 @@
       body {
         background-color: rgb(255, 187, 0);
       }
+    
+    /* Fonte de letra */
+body {
+        font-family: fantasy;
+    }
     </style>
   </head>
   <h1 style="text-align: center;"><img
       src="https://static.vecteezy.com/system/resources/previews/009/291/628/original/restaurant-logo-design-vector.jpg"
       alt="9291628-restaurante-logo-design-vetor.png" width="700" height="500"></h1>
 
-  <h4>
     <p style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira, com a intenção
       de que nossos clientes possam desfrutar de comida feita na hora!!!</p>
-  </h4>
 </body>
 
 </html>
@@ -38,18 +41,18 @@
 <body>
   <h6 style="background-color: rgb(0, 0, 0);">Olá</h6>
   
-  <h2 style="text-align: center;">TOP TRÊS PRINCIPAIS COMIDAS MAIS PEDIDAS!!!</h2>
+  <h1 style="text-align: center;">TOP TRÊS PRINCIPAIS COMIDAS MAIS PEDIDAS!!!</h1>
   <br>
   
-  <h3 style="text-align: center;">VIRADA PAULISTA</h3>
+  <h2 style="text-align: center;">VIRADA PAULISTA</h2>
   <h1 style="text-align: center;"><img src="https://t3.ftcdn.net/jpg/03/78/61/60/360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg"
       alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="700" height="500"></h1>
   <br>
-  <h3 style="text-align: center;">FEIJOADA</h3>
+  <h2 style="text-align: center;">FEIJOADA</h2>
   <h1 style="text-align: center;"><img src="https://assets.unileversolutions.com/recipes-v2/229468.jpg"
       alt="229468.avif" width="700" height="500"></h1>
   <br>
-  <h3 style="text-align: center;">STROGONOFF</h3>
+  <h2 style="text-align: center;">STROGONOFF</h2>
   <h1 style="text-align: center;"><img src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg"
       alt="strogonoff-de-frango-1548843823" width="700" height="500"></h1>
 </body>
@@ -59,7 +62,7 @@
 <h6 style="background-color: rgb(0, 0, 0);">Você é otimo...</h6>
 
 <html>
-<h2 style="text-align: center;">OS NOSSOS CARDAPIOS DO RESTAURANT TAGLINE</h2>
+<h1 style="text-align: center;">OS NOSSOS CARDAPIOS DO RESTAURANT TAGLINE</h1>
 <br>
 
 <body>
@@ -78,12 +81,12 @@
 
 </html>
 
-<h3>COMIDAS DELICIOSAS</h3>
+<h1 style="text-align: center;">COMIDAS DELICIOSAS</h1>
 
-<table style="width: 50%">
-  <tr>
-    <th>
-      <h3>ALMOÇO</h3>
+<h2><table style="width: 100%"></h2>
+ <tr>
+    <th>  
+    <h3>ALMOÇO</h3>
     </th>
     <th>
       <h3>PREÇO</h3>
@@ -140,9 +143,9 @@
       border: 1px solid #fffffffa;
     }
   </style>
-  <h3>BEBIDAS DELICIOSAS</h3>
+  <h1 style="text-align: center;">BEBIDAS DELICIOSAS</h1>
 
-  <table style="width:50%">
+  <h2><table style="width:100%"></h2>
     <tr>
       <th>
         <h3>SUCOS</h3>
@@ -154,7 +157,7 @@
     <tr>
       <th>Suco de maçã</th>
       <th>R$100.000,00</th>
-      </td>
+      </tr>
     <tr>
       <th>Suco de Maracujá</th>
       <th>R$100.000,00</tH>
@@ -227,8 +230,8 @@
 
 <body>
 
-  <h3>PORÇÕES DELICIOSAS</h3>
-  <table style="width:50%">
+  <h1 style="text-align: center;">PORÇÕES DELICIOSAS</h1>
+  <h2><table style="width:100%"></h2>
 
     <tr>
       <th>
@@ -281,15 +284,15 @@
 
   <p>
   <ul>
-    <h3>
+    <p>
       <li>INSTAGRAM: piorprato</li>
-    </h3>
-    <h3>
+    </p>
+    <p>
       <li>TWITTER: @piorprato</li>
-    </h3>
-    <h3>
+    </p>
+    <p>
       <li>BLUESKY: @piorprato.bsky.social</li>
-    </h3>
+    </p>
   </ul>
   </p>
 </body>
@@ -342,9 +345,9 @@
 
 <p>
 <ul>
-  <h4>
+  <h3>
     <li>Rua do JavaSquare, BrásIL, 9948</li>
-  </h4>
+  </h3>
 </ul>
 </p>
 <h6 style="background-color: black;">olá</h6>
@@ -413,7 +416,7 @@
   }
 
   input[type=submit] {
-    width: 70%;
+    width: 80%;
     background-color: rgb(255, 187, 0);
     color: rgb(0, 0, 0);
     padding: 14px 20px;
@@ -437,24 +440,29 @@
 <body>
 
   <h2 style="text-align: center;">Exemplo:</h2>
-  <h4 style="text-align: center;">Preencha o formulario com seus dados corretamente para concluir o seu cadastro:</h4>
+  <p style="text-align: center;">Preencha o formulario com seus dados corretamente para concluir o seu cadastro:</p>
 
   <form action="formulario2.html" method="post">
 
-    <h5 style="text-align: center;">
-      Full-name: <input type="text" name="Full-name"></p>
+    <h2 style="text-align: center;">
+      Full-name: <br>
+      <input type="text" name="Full-name"></h2>
 
-      <p style="text-align: center;">
-        Nickname: <input type="text" name="Nickname"></p>
+      <h2 style="text-align: center;">
+        Nickname: <br>
+        <input type="text" name="Nickname"></h2>
 
-      <p style="text-align: center;">
-        CPF: <input type="text" name="CPF"></p>
+      <h2 style="text-align: center;">
+        CPF: <br>
+        <input type="text" name="CPF"></h2>
 
-      <p style="text-align: center;">
-        RG: <input type="text" name="RG"></p>
+      <h2 style="text-align: center;">
+        RG: <br>
+        <input type="text" name="RG"></h2>
 
-      <p style="text-align: center;">
-        País: <select id="País" name="País"></p>
+      <h2 style="text-align: center;">
+        País: <br>
+        <select id="País" name="País"></h2>
       <option value="Argentina">Argentina</option>
       <option value="Brasil">Brasil</option>
       <option value="Bolivia">Bolivia</option>
@@ -465,8 +473,10 @@
       <option value="Chile">Chile</option>
       <option value="Colombia">Colombia</option>
       <option value="Venezuela">Venezuela</option>
+      <br>
       <input type="submit" value="Enviar o formulario">
-      </select>
+      <br>
+    </select>
   </form>
 </body>
 
