--- a/curiosidades.html
+++ b/curiosidades.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-widht, " initial=height-initial>
-        <title>Curiosidades</title>
-        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
-    </head>
-    <style>
-        body {
-            background-color: rgb(255, 187, 0);
-        }    
-    </style>
-    <h1 style="text-align: center;">ALGUMAS CURIOSIDADES<br>SOBRE O RESTAURANT TAGLINE</h1>
-    
-    <link rel="stylesheet" href="./css/curiosidades_inacre.css">
 
-    <style>
-      .city {
-        background-color: rgb(255, 255, 255);
-        color: rgb(0, 0, 0);
-        border: 2px solid rgb(240, 124, 0);
-        margin: 50px;
-        padding: 10px;
-      }
-    </style>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-widht, " initial=height-initial>
+  <title>Curiosidades</title>
+  <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
+</head>
+<style>
+  body {
+    background-color: rgb(255, 187, 0);
+  }
+
+/* Fonte de letra */
+body {
+        font-family: fantasy;
+    }
+</style>
+<h1 style="text-align: center;">ALGUMAS CURIOSIDADES<br>SOBRE O RESTAURANT TAGLINE</h1>
+
+<link rel="stylesheet" href="./css/curiosidades_inacre.css">
+
+<style>
+  .city {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border: 2px solid rgb(240, 124, 0);
+    margin: 50px;
+    padding: 10px;
+  }
+</style>
+</head>
 </body>
 
 </html>
@@ -33,57 +39,22 @@
 
   <div class="city">
     <h2 style="text-align: center;">Primeira Curiosidade</h2>
-    <p style="text-align: center;">O Restaurant Tagline participou de um programa do Erick Jackan chamado Pesadelo na Cozinha.</p>
+    <p style="text-align: center;">O Restaurant Tagline participou de um programa do Erick Jackan chamado Pesadelo na
+      Cozinha.</p>
   </div>
 
   <div class="city">
     <h2 style="text-align: center;">Segunda Curiosidade</h2>
-    <p style="text-align: center;">Recebemos varios certificados pela limpeza do nosso restaurante, apesar de que os nosso clientes se sentirem confortaveis ao experimentarem um prato delicioso da nossa comida.</p>
+    <p style="text-align: center;">Recebemos varios certificados pela limpeza do nosso restaurante, apesar de que os
+      nosso clientes se sentirem confortaveis ao experimentarem um prato delicioso da nossa comida.</p>
   </div>
 
   <div class="city">
     <h2 style="text-align: center;">Terceira Curiosidade</h2>
-    <p style="text-align: center;">Os nossos clientes ficam curiosos quando perguntam sobre os preços dos nossos pratos.</p>
+    <p style="text-align: center;">Os nossos clientes ficam curiosos quando perguntam sobre os preços dos nossos pratos.
+    </p>
   </div>
 
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </html>
