--- a/curiosidades.html
+++ b/curiosidades.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-widht, " initial=height-initial>
+  <meta name="viewport" content="width=device-widht, initial-scale=1.0">
   <title>Curiosidades</title>
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
@@ -58,3 +58,7 @@ body {
 </body>
 
 </html>
+
+<a href="restaurante1.html">
+  <p style="text-align: center;">Voltar ao site principal</p>
+</a>
