--- a/formulario2.html
+++ b/formulario2.html
@@ -2,13 +2,19 @@
 <html lang="pt-br">
 
 <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-widht, initial-scale=1.0">
     <style>
         body {
             background-color: rgb(255, 187, 0);
         }
+    
+    body {
+        font-family: fantasy;
+    }
     </style>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-widht, " initial=height-initial>
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
     <title>Criando formulario</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 
@@ -61,7 +67,12 @@
 
         <h3><label for="Outro">Qual foi o seu prato favorito?</label></h3>
         R: <input type="text" id="text" name="fav_language" value="">
-    </form>
+    <br>
+        <input type="submit" value="enviar formulario">
+   </form>
 </head>
-
 </html>
+
+<a href="restaurante1.html">
+    <p style="text-align: center;">Voltar ao site principal</p>
+</a>
