--- a/index1.html
+++ b/index1.html
@@ -28,7 +28,7 @@ body {
   </head>
   <h1 style="text-align: center;"><img
       src="https://static.vecteezy.com/system/resources/previews/009/291/628/original/restaurant-logo-design-vector.jpg"
-      alt="9291628-restaurante-logo-design-vetor.png" width="700" height="500"></h1>
+      alt="9291628-restaurante-logo-design-vetor.png" width="549" height="362"></h1>
 
     <p style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira, com a intenção
       de que nossos clientes possam desfrutar de comida feita na hora!!!</p>
@@ -39,7 +39,7 @@ body {
 <html>
 
 <body>
-  <h6 style="background-color: rgb(0, 0, 0);">Olá</h6>
+  <h6 style="background-color: rgb(0, 0, 0);">...</h6>
   
   <h1 style="text-align: center;">TOP TRÊS PRINCIPAIS COMIDAS MAIS PEDIDAS!!!</h1>
   <br>
@@ -59,7 +59,7 @@ body {
 
 </html>
 
-<h6 style="background-color: rgb(0, 0, 0);">Você é otimo...</h6>
+<h6 style="background-color: rgb(0, 0, 0);">...</h6>
 
 <html>
 <h1 style="text-align: center;">OS NOSSOS CARDAPIOS DO RESTAURANT TAGLINE</h1>
@@ -274,7 +274,7 @@ body {
 
 </html>
 
-<h6 style="background-color: rgb(0, 0, 0);">.</h6>
+<h6 style="background-color: rgb(0, 0, 0);">...</h6>
 
 <html>
 
