--- a/restaurante1.html
+++ b/restaurante1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-widht, " initial=height-initial>
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
     <link rel="stylesheet" href="./css/restaurant.css">
     <title>restaurante</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
