--- a/servidos.html
+++ b/servidos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-widht, " initial=height-initial>
+    <meta name="viewport" content="width=device-widht, initial-scale=1.0">
     <link rel="stylesheet" href="./css/servidos.css">
     <title>Os mais servidos</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
@@ -30,16 +30,16 @@
 <h2 style="text-align: center;">VIRADA PAULISTA</h2>
 <h1 style="text-align: center;"><img
         src="https://t3.ftcdn.net/jpg/03/78/61/60/360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg"
-        alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="700" height="500"></h1>
+        alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="" height=""></h1>
 <br>
 <h2 style="text-align: center;">FEIJOADA</h2>
 <h1 style="text-align: center;"><img src="https://assets.unileversolutions.com/recipes-v2/229468.jpg" alt="229468.avif"
-        width="700" height="500"></h1>
+        width="549" height="362"></h1>
 <br>
 <h2 style="text-align: center;">STROGONOFF</h2>
 <h1 style="text-align: center;"><img
         src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg"
-        alt="strogonoff-de-frango-1548843823" width="700" height="500"></h1>
+        alt="strogonoff-de-frango-1548843823" width="549" height="362"></h1>
 <br>
 <h2><p style="text-align: center;">E MUITO MAIS APENAS CLICANDO NO LINK ABAIXO!!</p></h2>
 <a href="cardapios.html">
