--- a/index1.html
+++ b/index1.html
@@ -46,15 +46,15 @@ body {
   
   <h2 style="text-align: center;">VIRADA PAULISTA</h2>
   <h1 style="text-align: center;"><img src="https://t3.ftcdn.net/jpg/03/78/61/60/360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg"
-      alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="700" height="500"></h1>
+      alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="" height=""></h1>
   <br>
   <h2 style="text-align: center;">FEIJOADA</h2>
   <h1 style="text-align: center;"><img src="https://assets.unileversolutions.com/recipes-v2/229468.jpg"
-      alt="229468.avif" width="700" height="500"></h1>
+      alt="229468.avif" width="549" height="362"></h1>
   <br>
   <h2 style="text-align: center;">STROGONOFF</h2>
   <h1 style="text-align: center;"><img src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg"
-      alt="strogonoff-de-frango-1548843823" width="700" height="500"></h1>
+      alt="strogonoff-de-frango-1548843823" width="549" height="362"></h1>
 </body>
 
 </html>
