Update1.2 cardapios.html

--- a/cardapios.html
+++ b/cardapios.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+  <meta name="viewport" content="width=device-widht">
   <title>Cardapios</title>
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
@@ -21,7 +21,7 @@ body {
 <body>
 
   <body>
-    <link rel="stylesheet" href="./css/cardapio1_index.css">
+    <link rel="stylesheet" href="index_cardapio1.css">
     <style>
       table,
       th,
@@ -86,7 +86,7 @@ body {
 <html>
 
 <body>
-  <link rel="stylesheet" href="./css/cardapio2_index.css">
+  <link rel="stylesheet" href="index_cardapio2.css">
   <style>
     table,
     th,
@@ -168,7 +168,7 @@ body {
 </html>
 
 <html>
-<link rel="stylesheet" href="./css/cardapio3_index.css">
+<link rel="stylesheet" href="index_cardapio3.css">
 <style>
   table,
   th,
@@ -222,6 +222,8 @@ body {
 
 </html>
 
+<body>
 <a href="restaurante1.html">
   <p style="text-align: center;">Voltar ao site principal</p>
 </a>
+</body>
