--- a/curiosidades.html
+++ b/curiosidades.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+  <meta name="viewport" content="width=device-widht">
   <title>Curiosidades</title>
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
@@ -19,7 +19,7 @@ body {
 </style>
 <h1 style="text-align: center;">ALGUMAS CURIOSIDADES<br>SOBRE O RESTAURANT TAGLINE</h1>
 
-<link rel="stylesheet" href="./css/curiosidades_inacre.css">
+<link rel="stylesheet" href="index.curiosidade.css">
 
 <style>
   .city {
