Update6.7 index1.html

--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
   <title>Pior Prato</title>
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
@@ -13,8 +13,8 @@
 <body>
 
   <head>
-    <link rel="stylesheet" href="./css/index_html.css">
-    <link rel="stylesheet" href="./css/index_cor_de_fundo.css">
+    <link rel="stylesheet" href="index_html.css">
+    <link rel="stylesheet" href="index_cor_de_fundo.css">
     <style>
       body {
         background-color: rgb(255, 187, 0);
@@ -66,8 +66,8 @@ body {
 <br>
 
 <body>
-  <link rel="stylesheet" href="./css/index_cardapio1.css">
-  <link rel="stylesheet" href="./css/index_html.css">
+  <link rel="stylesheet" href="index_cardapio1.css">
+  <link rel="stylesheet" href="index_html.css">
 
   <style>
     table,
@@ -133,8 +133,8 @@ body {
 <html>
 
 <body>
-  <link rel="stylesheet" href="./css/index_cardapio2.css">
-  <link rel="stylesheet" href="./css/index_html.css">
+  <link rel="stylesheet" href="index_cardapio2.css">
+  <link rel="stylesheet" href="index_html.css">
 
   <style>
     table,
@@ -217,8 +217,8 @@ body {
 </html>
 
 <html>
-<link rel="stylesheet" href="./css/index_cardapio3.css">
-<link rel="stylesheet" href="./css/index_html.css">
+<link rel="stylesheet" href="index_cardapio3.css">
+<link rel="stylesheet" href="index_html.css">
 
 <style>
   table,
@@ -304,8 +304,8 @@ body {
 <body>
 
   <head>
-    <link rel="stylesheet" href="./css/index_redes_sociais.css">
-    <link rel="stylesheet" href="./css/index_html.css">
+    <link rel="stylesheet" href="index_redes_sociais.css">
+    <link rel="stylesheet" href="index_html.css">
     
     <style>
       .nav {
@@ -357,8 +357,8 @@ body {
 <body>
 
   <head>
-    <link rel="stylesheet" href="./css/index.curiosidade.css">
-    <link rel="stylesheet" href="./css/index_html.css">
+    <link rel="stylesheet" href="index.curiosidade.css">
+    <link rel="stylesheet" href="index_html.css">
 
     <style>
       .city {
@@ -400,8 +400,8 @@ body {
 
 <h6 style="background-color: black;">.</h6>
 
-<link rel="stylesheet" href="./css/index_formulario.css">
-<link rel="stylesheet" href="./css/index_html.css">
+<link rel="stylesheet" href="index_formulario.css">
+<link rel="stylesheet" href="index_html.css">
 
 <style>
   input[type=text],
