Update3.6 redesociais.html

--- a/redesociais.html
+++ b/redesociais.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-widht, initial-scale=1.0">
+  <meta name="viewport" content="width=device-widht">
   <title>Midias</title>
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
@@ -42,7 +42,7 @@ body {
   <h1 style="text-align: center;">Nosso endereço localizado em:</h1>
 
   <head>
-    <link rel="stylesheet" href="./css/redes_sociais_ReSo.css">
+    <link rel="stylesheet" href="index_redes_sociais.css">
     <style>
       /* endereço (comando utilizavel) */
       .city {
