--- a/servidos.html
+++ b/servidos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-widht, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/servidos.css">
+    <link rel="stylesheet" href="servidos.css">
     <title>Os mais servidos</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
