--- a/redesociais.html
+++ b/redesociais.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-widht">
+  <meta name="viewport" content="width=device-widht,  initial-scale=1.0">
   <title>Midias</title>
   <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 </head>
