--- a/cardapios.html
+++ b/cardapios.html
@@ -14,7 +14,7 @@
 
 /* Fonte de letra */
 body {
-        font-family: fantasy;
+        font-family: Arial, Helvetica, sans-serif;
     }
 </style>
 
