--- a/curiosidades.html
+++ b/curiosidades.html
@@ -14,7 +14,7 @@
 
 /* Fonte de letra */
 body {
-        font-family: fantasy;
+        font-family: Arial, Helvetica, sans-serif;
     }
 </style>
 <h1 style="text-align: center;">ALGUMAS CURIOSIDADES<br>SOBRE O RESTAURANT TAGLINE</h1>
