--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
     
     /* Fonte de letra */
 body {
-        font-family: fantasy;
+        font-family: Arial, Helvetica, sans-serif;
     }
     </style>
   </head>
