--- a/redesociais.html
+++ b/redesociais.html
@@ -15,7 +15,7 @@
 
   /* Fonte de letra */
 body {
-        font-family: fantasy;
+        font-family: Arial, Helvetica, sans-serif;
     }
 </style>
 <h1 style="text-align: center;">Sigam o Restaurant Tagline!!</h1>
