--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
   </figure>
 
   <figure class="restaurant_tagline">
-    <img src="img/strogonoff.jpg" alt="strogonoff-de-frango">
+    <img src="img/Strogonoff.jpg" alt="strogonoff-de-frango">
     <figcaption>
       Strogonoff
     </figcaption>
